[project]
name = "load_heka"
authors = [{name = "JoeZiminski"}]
license = {text = "BSD-3-Clause"}
version = "0.0.1"

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["load_heka*"]
