[project]
name = "load-heka-python"
authors = [
    {name = "Easy Electrophysiology", email = "support@easyelectrophysiology.com"},
]
description = "Load HEKA files created by PatchMaster software into Python."
readme = "README.md"
requires-python = ">=3.7.0"
dynamic = ["version"]
license = {text = "MIT"}

dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "pre-commit",
    "ruff",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["load_heka_python*"]

[tool.setuptools_scm]

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
skip-string-normalization = false
line-length = 120

[tool.codespell]
ignore-words-list = 'onl,outout,inout,remaning'
